# JsonMidiPlayer

./: .gitignore  CMakeLists.txt  README.md  _debugging_file.json  _debugging_file.mjp  book-01-repeating_theme.json  book-01-repeating_theme_1.json  exported_lead_sheet_melody_jmp.json  linux_exported_lead_sheet_melody_jmp.json  main.cpp  midiSimpleNotes mjp  midiSimpleNotes.json  python_ctypes.py  test.py  testLibraryAccess.py  test_ctypes.py  windows_exported_lead_sheet_melody_jmp.json
include/: JsonMidiPlayer.hpp  JsonMidiPlayer_ctypes.hpp  MidiJsonPlayer.hpp  MidiJsonPlayer_ctypes.hpp  json.hpp
json/: _Export_11.1_sysex_stop.json  _Export_11.1_two_devices.json  _Export_Clock_basic.json  _Export_Example9_circle_fifths_no_devices.json  _Export_Specific_test_1.2_keyscale.json  _Linux_Export_4.1_control_change.json  _Linux_Export_4.2_pitch_bend.json  book-01-repeating_theme_2.json
src/: JsonMidiPlayer.cpp  JsonMidiPlayer_ctypes.cpp  MidiJsonPlayer.cpp  MidiJsonPlayer_ctypes.cpp
support/: MIDI Messages.html  compiling_commands.txt  linux_commands.txt  sleep_code.cpp
support/MIDI Messages_files/: BSC_MM_CALLER.css
